# source-modding-search-tool

./: .gitignore  LICENSE.txt  README.md  build.js  package.json
public/: electron.js  index.html  preload.js
src/: App.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FileDropZone.js  FileList.js  MainLayout.js  ResultLine.js  SearchPanel.js  SearchResults.js  VirtualizedResults.js
src/utils/: searchEngine.js  tauriBridge.js
test/: generate_huge_stress_test_files.js  generate_stress_test_files.js
